--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,15 +1,16 @@
+{% load static %}
 <!doctype html>
 <html lang="ru" class="h-100">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" type="image/png" href="static/images/logo.png"/>
-    <link rel="shortcut icon" type="image/png" href="static/images/logo.png"/>
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/logo.png' %}"/>
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/logo.png' %}"/>
     <title>PythonBin</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- Custom styles for this template -->
     <style>
         main > .container {
@@ -36,8 +37,8 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="...">
-                <img src="images/logo.png" width="32" height="32" alt="">
+            <a class="navbar-brand" href="{% url 'index' %}">
+                <img src="{% static 'images/logo.png' %}" width="32" height="32" alt="">
                 PythonBin
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -46,8 +47,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
-                    <li class="form-inline"><a class="btn btn-outline-secondary" href="">Добавить сниппет</a></li>
-                    <li class="form-inline"><a class="btn btn-outline-info" href="...">Посмотреть
+                    <li class="form-inline"><a class="btn btn-outline-secondary" href="{% url 'snippets_add' %}">Добавить сниппет</a></li>
+                    <li class="form-inline"><a class="btn btn-outline-info" href="{% url 'snippets_list' %}">Посмотреть
                         сниппеты</a></li>
                 </ul>
             </div>
@@ -76,7 +77,7 @@
 
         <div class="row mt-3">
             <div class="col-4 offset-4">
-                <a href="" class="btn btn-secondary btn-block">Добавить сниппет</a>
+                <a href="{% url 'snippets_add' %}" class="btn btn-secondary btn-block">Добавить сниппет</a>
             </div>
         </div>
 
