--- a/templates/pages/view_snippets.html
+++ b/templates/pages/view_snippets.html
@@ -1,63 +1,11 @@
+{% extends 'base.html' %}
 {% load static %}
-<!doctype html>
-<html lang="ru" class="h-100">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" type="image/png" href="{% static 'images/logo.png' %}"/>
-    <link rel="shortcut icon" type="image/png" href="{% static 'images/logo.png' %}"/>
-    <title>PythonBin</title>
+{% block title %}
+    Добавить сниппет
+{% endblock %}
 
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <!-- Custom styles for this template -->
-    <style>
-        main > .container {
-            padding: 60px 15px 0;
-        }
-
-        .footer {
-            background-color: #f5f5f5;
-        }
-
-        .footer > .container {
-            padding-right: 15px;
-            padding-left: 15px;
-        }
-
-        code {
-            font-size: 80%;
-        }
-    </style>
-</head>
-
-<body class="d-flex flex-column h-100">
-
-<header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="{% url 'index' %}">
-                <img src="{% static 'images/logo.png' %}" width="32" height="32" alt="">
-                PythonBin
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="form-inline"><a class="btn btn-outline-secondary" href="{% url 'snippets_add' %}">Добавить сниппет</a></li>
-                    <li class="form-inline"><a class="btn btn-outline-info" href="{% url 'snippets_list' %}">Посмотреть
-                        сниппеты</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
-
-<!-- Begin page content -->
-<main role="main" class="mt-3 flex-shrink-0">
+{% block content %}
     <div class="container">
         <div class="row">
             <div class="col text-center">
@@ -80,20 +28,7 @@
             </div>
         </div>
     </div>
-</main>
+{% endblock %}
 
-<footer class="footer mt-auto py-3">
-    <span class="text-muted">&copy; Юрченко Евгений, {% now "Y" %}. <br>
-        Шаблон заготовка для урока</span>
-</footer>
+{% include 'includes/footer.html' %}
 
-<!-- Optional JavaScript -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" crossorigin="anonymous"
-        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" crossorigin="anonymous"
-        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"></script>
-</body>
-
-</html>
