--- a/templates/pages/view_snippets.html
+++ b/templates/pages/view_snippets.html
@@ -1,10 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}
-    Добавить сниппет
-{% endblock %}
-
 {% block content %}
     <div class="container">
         <div class="row">
@@ -15,17 +11,35 @@
         </div>
 
         <div class="row">
-            <div class="col">
-                <p>На данной страницы будут отображаться все созданные сниппеты.</p>
-                <p>Пока тут пусто, скоро мы это исправим!</p>
-                <hr>
+            <div class="col-4 offset-2">
+                <h2>Список сниппетов:</h2>
             </div>
         </div>
+    </div>
 
-        <div class="row">
-            <div class="col-4 offset-2">
-                Список сниппетов:
-            </div>
+    <div class="col">
+        <table class="table table-striped">
+            <thead class="thead-dark">
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Название</th>
+                <th scope="col">Дата создания</th>
+            </tr>
+            </thead>
+            <tbody>
+
+            {% for snippet in snippets %}
+                <tr>
+                    <td scope="row">{{ snippet.id }}</td>
+                    <td><a href="{% url 'snippet_details' snippet.id %}">{{ snippet.name }}</a></td>
+                    <td>{{ snippet.creation_date }}</td>
+                </tr>
+            {% endfor %}
+
+            </tbody>
+        </table>
+        <div align="right">
+            <i style="color: gray;">Всего сниппетов: 2</i>
         </div>
     </div>
 {% endblock %}
