fix block title. add pagename

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" type="image/png" href="{% static 'images/logo.png' %}"/>
     {% endblock %}
     <title>
-        {% block title %}Base{% endblock %}
+        {% block title %}{{ pagename }}{% endblock %}
     </title>
 
     <!-- Bootstrap core CSS -->
