--- a/templates/pages/add_snippet.html
+++ b/templates/pages/add_snippet.html
@@ -15,36 +15,9 @@
 
                 <form action="{% url 'form_data' %}" method="post">
                     {% csrf_token %}
-                    <div class="form-group row">
-                        <div class="col-sm-8">
-                            <input name="name" type="text" class="form-control form-control-lg" placeholder="Название сниппета">
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col-sm-8">
-                            <select name="lang">
-                                <option>Python</option>
-                                <option>C++</option>
-                                <option>JavaScript</option>
-                            </select>
-{#                            <div class="dropdown">#}
-{#                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"#}
-{#                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
-{#                                    Язык сниппета#}
-{#                                </button>#}
-{#                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">#}
-{#                                    <a class="dropdown-item" href="#">Python</a>#}
-{#                                    <a class="dropdown-item" href="#">JavaScript</a>#}
-{#                                    <a class="dropdown-item" href="#">C++</a>#}
-{#                                </div>#}
-{#                            </div>#}
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col">
-                            <textarea name="code" cols="96" rows="10" placeholder="Код сниппета"></textarea>
-                        </div>
-                    </div>
+                    <table>
+                        {{ form }}
+                    </table>
                     <div class="form-group row">
                         <div class="col-8">
                             <input type="submit" class="btn btn-primary btn-block" value="Сохранить">
